# cirrus-scope

./: .gitignore  Cargo.toml  Makefile
images/deb/: Dockerfile.debian12  Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04
images/rpm/: Dockerfile.fedora41  Dockerfile.rawhide  Dockerfile.rocky8  Dockerfile.rocky9  Dockerfile.sle15sp6  Dockerfile.tumbleweed
man/: Makefile  cirrus-scope  cirrus-scope-help2man  combine.py
man/man1/: cirrus-scope.1
src/: db.rs  main.rs
src/opt/: tool.rs
