[package]
name = "cirrus-scope"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://himmelblau-idm.org/"
repository = "https://github.com/himmelblau-idm/cirrus-scope"
authors = [
    "David Mulder <dmulder@suse.com>"
]
description = "Diagnostic utility for debugging Entra ID authentication issues via libhimmelblau"

[dependencies]
libhimmelblau = { version = "0.6.20", features = ["developer"] }
tokio = { version = "1.35.1", features = ["full"] }
openssl = "0.10.62"
uuid = { version = "^1.4.1", features = [ "v4" ] }
num-traits = "^0.2.17"
kanidm-hsm-crypto = { version = "^0.2.0", features = ["msextensions"] }
rpassword = "7.3.1"
anyhow = "1.0.83"
reqwest = "0.12.4"
serde = "1.0.200"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sha2 = "0.10.8"
authenticator = { version = "0.4.1", default-features = false, features = ["crypto_openssl"] }
base64 = "0.22.1"
serde_json = "1.0.132"
libc = "0.2.171"
clap = { version = "4.5.32", features = ["derive"] }
sketching = "1.5.0"
rusqlite = "0.34.0"
regex = "1.11.1"

[package.metadata.deb]
name = "cirrus-scope"
maintainer = "David Mulder <dmulder@himmelblau-idm.org>"
depends = ["$auto"]
assets = [
  ["target/release/cirrus-scope", "usr/bin/", "755"],
  ["man/man1/cirrus-scope.1", "usr/share/man/man1/", "644"],
]

[package.metadata.generate-rpm]
name = "cirrus-scope"
maintainer = "David Mulder <dmulder@himmelblau-idm.org>"
assets = [
  { source = "target/release/cirrus-scope", dest = "/usr/bin/", mode = "755" },
  { source = "man/man1/cirrus-scope.1", dest = "/usr/share/man/man1/", mode = "644" },
]
